--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
             <a href="/" class="active">메인</a> 
             <a href="vote.html">투표 하기</a> 
             <a href="result.html">결과 보기</a>
-            <a href="https://github.com/riri0602" class="right"><img src="images/GitHub-Mark-32px.png"></a>
+            <a href="https://github.com/riri0602/election" class="right"><img src="images/GitHub-Mark-32px.png"></a>
         </div>
 
     <!-- 로딩바 -->
