--- a/src/result.html
+++ b/src/result.html
@@ -77,7 +77,7 @@
         <a href="/">메인</a> 
         <a href="vote.html">투표 하기</a> 
         <a href="result.html"  class="active">결과 보기</a> 
-        <a href="https://github.com/riri0602" class="right"><img src="images/GitHub-Mark-32px.png"></a>
+        <a href="https://github.com/riri0602/election" class="right"><img src="images/GitHub-Mark-32px.png"></a>
     </div>
     
       <h1>투표 결과</h1>
