--- a/src/vote.html
+++ b/src/vote.html
@@ -67,7 +67,7 @@
         <a href="/">메인</a> 
         <a href="vote.html"  class="active">투표 하기</a> 
         <a href="result.html">결과 보기</a>
-        <a href="https://github.com/riri0602" class="right"><img src="images/GitHub-Mark-32px.png"></a>
+        <a href="https://github.com/riri0602/election" class="right"><img src="images/GitHub-Mark-32px.png"></a>
     </div>
 
     <div id="loader">
